<resources>
    <string name="app_name">ConcroledeGastos2</string>
    <string name="casa">Casa</string>
    <string name="supermercado">Supermercado</string>
    <string name="saude">Saude</string>
    <string name="transporte">Transporte</string>
    <string name="detalhes">Detalhes</string>
    <string name="sobre">Aplicativo desenvolvido por Deigon Prates</string>

    <string-array name="mes">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>

</resources>
